style.css
.site-header {
	position: absolute;
	
	top: 0;
	left: 0;
	right: 0;
	
	height: 300px;
}

.site-header-full{
	bottom:0;
	/* important to keep this property for small resolutions*/
	height:initial !important;
}

.site-header-labs{
	height:60px !important;
}

.site-header .image-src{
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;

	background-position: center;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

.site-header .image-src.main-image{
	/*https://www.flickr.com/photos/mathieu_distefano/13579152303*/
	background-image:url('img/shine.jpg');
}

.site-header .title{
	position: absolute;
	width: 100%;
	text-align: center;
	bottom: 150px;
	color: #FFF;
}

.site-header .title-404{
	/* important to keep this property for small resolutions*/
	bottom:50% !important;
}

.site-header .title h1{
	font-size: 45px;
	color: #1CC1F8;
}

.site-header .title a, 
.site-header .title a:hover,
.site-header .title a:focus{
	color:#FFF;
}

.site-header .menu{
	text-align: center;
	position:absolute;
	width:100%;
	bottom:0;
}

.site-header .menu > ul{
	padding-left: 0;
}

.site-header .menu > ul li{
	list-style: none;
	display:inline-block;
	
	padding-left: 1em;
	font-size: 1.5em;
}

.site-header .menu > ul li a{
	color:#FFF;
}

.site-header + div.container-fluid{
	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
	box-sizing:border-box;
	
	padding-top:320px;	/* for site header */
}


.site-header .menu > ul li.active > a{
	border-bottom-width: 2px;
	border-bottom-style: solid;
}

.site-header .menu > ul li > a{
	/*color: #F8701C;*/
	color: #1CC1F8;
}

.container-fluid > .posts, .container-fluid > .form {
	margin-left: auto;
	margin-right: auto;
	width: 80%;
	max-width: 55em;
}

h1,h2, h3{
	font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
	font-weight: 700;
	
	letter-spacing: -0.02em;
	line-height: 1.1;
}

.posts > article div.post-content{
	letter-spacing: 0.01rem;
	font-weight: 400;
	font-style: normal;
	line-height: 1.5;
	text-align: justify;
}

.posts > article footer{
	text-align:right;
}

a,a:hover, a:focus {
	color: #333332;
	text-decoration: none;
}

.posts article{
	margin-bottom: 1em;
}

.posts article.preview  .post-category,
.posts article.preview .post-category a,
.posts article.preview  .post-category a:hover, 
.posts article.preview  .post-category a:focus {
	color:#b3b3b1;
}

.posts article.preview > header h3{
	margin-top:10px;
	margin-bottom:10px;
}

.posts article.preview > header .post-category{}

.comments textarea{
	width:100%;
}

#page404 > h1 {
	font-size: 7em;
}

#page404 > p {
	font-size: 4em;
}

.form > form > .form-group {
	width: 80%;
}

.form > form {
	margin-bottom: 2em;
}

@media screen and (max-width: 600px){
	.site-header{
		height: 250px;
	}
	
	.site-header + div.container-fluid{
		padding-top:270px;	/* for site header */
	}
	
	.site-header .title{
		bottom: 75px;
	}
	
	.container-fluid > .posts{
		width: 90%;
	}
}

